--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="hero">
             <nav>
-                <img src="https://images.pexels.com/photos/206395/pexels-photo-206395.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="logo" />
+                <img src="https://instagram.fbdq2-1.fna.fbcdn.net/v/t51.2885-19/340016772_777800620216136_7068804196721414342_n.jpg?stp=dst-jpg_s150x150&_nc_ht=instagram.fbdq2-1.fna.fbcdn.net&_nc_cat=108&_nc_ohc=n3p6IzxmiisAX-Cv4-I&edm=ACWDqb8BAAAA&ccb=7-5&oh=00_AfDgrU7gnETBcUSdSzjq9MSZja4wnkeDkrT8PHD9FDKbmQ&oe=647937CF&_nc_sid=640168" class="logo" />
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -22,9 +22,9 @@
             </nav>
             <div class="content">
                 <span class="title">Developer | MLSA</span>
-                <h1>Hello, I’m <span>emma</span></h1>
+                <h1>Hello, I’m <span>KRISH SONI</span></h1>
                 <p>
-                    Hello my name is KRISH SONI. I am currently pursuing CSE and upskilling myself in Backend Develoment and Cloud. Apart from that I am also Microsoft Learn Student Ambassador.
+                     I am currently pursuing CSE and upskilling myself in Backend Develoment and Cloud. Apart from that I am also Microsoft Learn Student Ambassador.
                 </p>
                 <a href="#" class="btn">Download CV</a>
             </div>
